# dailybible-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  schedule.csv
.github/workflows/: docker-image.yml  release.yaml
input/: schedule.csv
src/: biblereading.rs  localize.rs  main.rs  userstate.rs
testdata/: test_userstate_loading.json
