[package]
name = "dailybible-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
csv = "1.3.0"
chrono =  { version = "0.4.38", features = ["serde"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio-util = "0.7.12"
bibleref = "0.3.1"
